ci: add gitlab ci/cd pipeline
Add a new gitlab CI/CD pipeline to build the app and publish it using
gitlab pages.
Add new makefile with simple commands.
Update app homepage to match location on gitlab pages.

--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "paranormal-guide",
   "version": "0.1.0",
   "private": true,
+  "homepage": "/paranormal-guide",
   "dependencies": {
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^11.2.7",
