feat: create basic ui wireframe
Re-write the page HTML to create a basic page wireframe. This wireframe
does not contain any logic and instead only focuses on rendering the right
components in the right place.
Add the ForkAwesome repo to the project to handle rendering icons.
Support submodules in gitlab CI/CD.

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -2,6 +2,9 @@ stages:
   - build
   - publish
 
+variables:
+  GIT_SUBMODULE_STRATEGY: recursive
+
 react/build:
   image: node:latest
   stage: build
