refactor: rename app
Rename the app to "Phasmophobia Guide" instead of "Paranormal Guide" to
make the app easier to find.
Re-write the HTML page description.

--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "paranormal-guide",
+  "name": "phasmophobia-guide",
   "version": "0.1.0",
   "private": true,
-  "homepage": "/paranormal-guide",
+  "homepage": "/phasmophobia-guide",
   "dependencies": {
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^11.2.7",
