--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,6 +1,6 @@
 {
-  "short_name": "Paranormal Guide",
-  "name": "Paranormal Guide",
+  "short_name": "Phasmophobia Guide",
+  "name": "Phasmophobia - Paranormal Guide",
   "icons": [
     {
       "src": "favicon.ico",
