build: new review app for merge request preview
Update the Gitlab CI/CD pipeline to configure a new review app for each
build of the app.
Add a `PUBLIC_URL` variable to the build step to update the path where the
react app expects to be hosted. In this case, it will be hosted out of the
job artifacts folder.
Configure the build pipeline to only run the publish build on the main
branch, and run the preview build in all other cases.

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -5,9 +5,30 @@ stages:
 variables:
   GIT_SUBMODULE_STRATEGY: recursive
 
-react/build:
+build/preview:
   image: node:latest
   stage: build
+  except:
+    - main
+  environment:
+    name: "preview/$CI_COMMIT_REF_NAME"
+    url: "https://$CI_PROJECT_NAMESPACE.gitlab.io/-/$CI_PROJECT_NAME/-/jobs/$CI_JOB_ID/artifacts/build/index.html"
+  variables:
+    PUBLIC_URL: "/-/$CI_PROJECT_NAME/-/jobs/$CI_JOB_ID/artifacts/build"
+  before_script:
+    - make npm/install
+  script:
+    - make npm/build
+  artifacts:
+    paths:
+      - build/*
+    expire_in: 7 days
+
+build/publish:
+  image: node:latest
+  stage: build
+  only:
+    - main
   before_script:
     - make npm/install
   script:
