--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -6,7 +6,7 @@ variables:
   GIT_SUBMODULE_STRATEGY: recursive
 
 build/preview:
-  image: node:latest
+  image: node:16
   stage: build
   except:
     - main
@@ -25,7 +25,7 @@ build/preview:
     expire_in: 7 days
 
 build/publish:
-  image: node:latest
+  image: node:16
   stage: build
   only:
     - main
