--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,22 +1,38 @@
 stages:
+  - test
   - build
   - publish
 
 variables:
   GIT_SUBMODULE_STRATEGY: recursive
 
-build/preview:
-  image: node:16
+.node_template:
+  image: node:20
+  before_script:
+    - cd frontend/
+    - npm ci --cache .npm --prefer-offline
+  cache:
+    key: $CI_COMMIT_REF_SLUG
+    paths:
+      - .npm/
+
+sast:
+  stage: test
+
+include:
+- template: Security/SAST.gitlab-ci.yml
+- template: Security/Dependency-Scanning.gitlab-ci.yml
+
+preview:
+  extends: .node_template
   stage: build
-  except:
-    - main
+  rules:
+    - if: $CI_COMMIT_TAG !~ /^v.*$/
   environment:
     name: "preview/$CI_COMMIT_REF_NAME"
     url: "https://$CI_PROJECT_NAMESPACE.gitlab.io/-/$CI_PROJECT_NAME/-/jobs/$CI_JOB_ID/artifacts/build/index.html"
   variables:
     PUBLIC_URL: "/-/$CI_PROJECT_NAME/-/jobs/$CI_JOB_ID/artifacts/build"
-  before_script:
-    - make npm/install
   script:
     - make npm/build
   artifacts:
@@ -24,13 +40,11 @@ build/preview:
       - build/*
     expire_in: 7 days
 
-build/publish:
-  image: node:16
+publish:
+  extends: .node_template
   stage: build
-  only:
-    - main
-  before_script:
-    - make npm/install
+  rules:
+    - if: $CI_COMMIT_TAG =~ /^v.*$/
   script:
     - make npm/build
   artifacts:
@@ -41,8 +55,8 @@ build/publish:
 pages:
   image: alpine
   stage: publish
-  only:
-    - main
+  rules:
+    - if: $CI_COMMIT_TAG =~ /^v.*$/
   script:
     - rm -r public/
     - mv build/ public/
