--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -22,6 +22,12 @@ include:
   - template: Security/SAST.gitlab-ci.yml
   - template: Security/Dependency-Scanning.gitlab-ci.yml
 
+format:
+  extends: .node_template
+  stage: test
+  script:
+    - npm run check-format
+
 preview:
   extends: .node_template
   stage: build
