--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "private": true,
   "homepage": "/phasmophobia-guide",
   "dependencies": {
+    "@supabase/supabase-js": "^2.42.7",
     "@testing-library/jest-dom": "^6.4.2",
     "@testing-library/react": "^15.0.5",
     "@testing-library/user-event": "^14.5.2",
