--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
-[submodule "src/fa"]
-	path = src/fa
+[submodule "src/libs/fa"]
+	path = src/libs/fa
 	url = https://github.com/ForkAwesome/Fork-Awesome.git
