--- a/package.json
+++ b/package.json
@@ -3,12 +3,12 @@
   "private": true,
   "homepage": "/phasmophobia-guide",
   "dependencies": {
-    "@supabase/supabase-js": "^2.43.4",
     "@testing-library/jest-dom": "^6.4.5",
     "@testing-library/react": "^15.0.7",
     "@testing-library/user-event": "^14.5.2",
     "bulma": "^1.0.1",
     "node-sass": "^9.0.0",
+    "pocketbase": "^0.21.4",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-scripts": "5.0.1",
