--- a/.env
+++ b/.env
@@ -1,3 +1,5 @@
+REACT_APP_ANALYTICS_SRC=placeholder
+REACT_APP_ANALYTICS_ID=placeholder
 REACT_APP_SUPABASE_URL=placeholder
 REACT_APP_SUPABASE_KEY=placeholder
 REACT_APP_REALTIME_SYNC_ENABLED=false
