--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "phasmophobia-guide",
   "private": true,
-  "homepage": "/phasmophobia-guide",
+  "homepage": "/",
   "dependencies": {
     "@testing-library/jest-dom": "^6.4.5",
     "@testing-library/react": "^15.0.7",
